[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snin"
version = "5.0.0.dev1"
description = "Sovereign Network Intelligence Node — P2P mesh for AI agents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "SNIN Network", email = "snin-network@v2.site"},
]
keywords = [
    "p2p", "mesh", "nostr", "ai-agent", "distributed",
    "kademlia", "dht", "fabric", "self-learning", "routing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Topic :: Internet",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "pynostr>=0.1.26",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "orjson>=3.9",
    "redis>=5.0",
    "cryptography>=41.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://snin-network.v2.site"
Repository = "https://github.com/snin-network/snin-core"
Documentation = "https://github.com/snin-network/snin-core"
Changelog = "https://github.com/snin-network/snin-core/blob/main/CHANGELOG.md"
Bug_Tracker = "https://github.com/snin-network/snin-core/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
]
dashboard = [
    "flask>=3.0",
    "flask-socketio>=5.3",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["snin*"]

[tool.setuptools.package-data]
snin = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
